--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "podfi",
+  "name": "musico",
   "license": "MIT",
   "version": "0.1.0",
   "description": "PodFi, a decentralized podcasting platform on the Avalanche blockchain, addresses these challenges by introducing tokenized rewards, a decentralized ad marketplace, and community-driven governance. It empowers creators, engages listeners, and revolutionizes podcast monetization through blockchain innovation.",
